chore: update SMTP host in .env.example to use localhost

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ POSTGRES_DB=voting-api
 POSTGRES_SSL=false
 
 # Mailer configuration
-SMTP_HOST=smtp4dev
+SMTP_HOST=127.0.0.1
 SMTP_PORT=1025
 SMTP_USER=user
 SMTP_PASSWORD=pass
