--- a/.env.example
+++ b/.env.example
@@ -3,42 +3,42 @@ NODE_ENV=development
 PORT=4000
 
 # Postgres
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5436
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=
 POSTGRES_DB=voting-api
 POSTGRES_SSL=false
 
 # Mailer configuration
-SMTP_HOST=127.0.0.1
+SMTP_HOST=smtp4dev
 SMTP_PORT=1025
 SMTP_USER=user
-SMTP_PASSWORD=pass
+SMTP_PASSWORD=
 SMTP_FROM=noreply@voting.com
 SMTP_SECURE=false
 FRONTEND_URL=http://localhost:3000
 
 # JWT
-JWT_SECRET=e89286c640d82185638bd79753ddd8ac
-JWT_ACCESS_EXPIRATION=1d
-JWT_REFRESH_EXPIRATION=7d
+JWT_SECRET=
+JWT_ACCESS_EXPIRATION=
+JWT_REFRESH_EXPIRATION=
 
 # Apple
-APPLE_CLIENT_ID=your-client-id
-APPLE_TEAM_ID=your-team-id
-APPLE_KEY_ID=your-key-id
+APPLE_CLIENT_ID=
+APPLE_TEAM_ID=
+APPLE_KEY_ID=
 # Apple private key should be in base64 format
-APPLE_PRIVATE_KEY=your-private-key
+APPLE_PRIVATE_KEY=
 APPLE_CALLBACK_URL=http://localhost:4000/auth/apple/callback/
 
 # Google
-GOOGLE_CLIENT_ID=your-client-id
-GOOGLE_CLIENT_SECRET=your-client-secret
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=http://localhost:4000/auth/google/callback/
 
 # AWS
-AWS_ACCESS_KEY_ID=your-access-key-id
-AWS_SECRET_ACCESS_KEY=your-secret-access-key
-AWS_S3_REGION=your-region
-AWS_S3_BUCKET=your-bucket-name
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_S3_REGION=
+AWS_S3_BUCKET=
