--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,21 @@
 services:
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    networks:
+      - app-network
+    ports:
+      - '${PORT:-4000}:4000'
+    volumes:
+      - ./uploads:/app/uploads
+    depends_on:
+      - postgres
+      - smtp4dev
+    restart: unless-stopped
+
   postgres:
     image: postgres:14
     env_file:
@@ -9,6 +26,7 @@ services:
       - '$POSTGRES_PORT:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
   smtp4dev:
     image: rnwood/smtp4dev
     ports:
