feat: add automatic database migration feature and update environment configuration
- Introduced a new MigrationService to handle database migrations based on the AUTO_MIGRATE_DB environment variable.
- Updated .env.example to include AUTO_MIGRATE_DB configuration.
- Modified DrizzleService to run migrations on startup if enabled.
- Updated db:migrate script to use a dedicated migration script.
- Added .dockerignore file to exclude unnecessary files from Docker context.

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ POSTGRES_PASSWORD=
 POSTGRES_DB=voting-api
 POSTGRES_SSL=false
 
+# Auto migrate the database on startup
+AUTO_MIGRATE_DB=false
+
 # Mailer configuration
 SMTP_HOST=smtp4dev
 SMTP_PORT=1025
